--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/minangkabau2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portal resmi Solok Selatan - Temukan informasi pariwisata, bisnis lokal, dan budaya khas Solok Selatan" />
     <title>Solok Selatan - Pesona Alam dan Budaya</title>
